<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addNote.AddNoteFragment">

    <data>

        <variable
            name="args"
            type="com.task.noteapp.ui.addNote.AddNoteFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideInset"
            android:scrollbarThumbVertical="@drawable/scollbar_shape"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_100">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:autofillHints="@string/note_title"
                    android:hint="@string/note_title"
                    android:inputType="text"
                    android:lines="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{args.note.note}' />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_60"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:autofillHints="@string/note_image_url"
                    android:hint="@string/note_image_url"
                    android:inputType="textUri"
                    android:lines="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_et">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/image_url_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text='@{args.note.imgUrl}' />

                </com.google.android.material.textfield.TextInputLayout>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/note_image_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:visibility="gone"
                    android:contentDescription="@string/image_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_url_et"
                    app:riv_corner_radius="@dimen/margin_12" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/note_description"
                    android:ems="10"
                    android:hint="@string/note_description"
                    android:inputType="textMultiLine"
                    app:boxCornerRadiusBottomStart="@dimen/margin_40"
                    app:boxCornerRadiusTopEnd="@dimen/margin_40"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/note_image_iv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:text='@{args.note.description}' />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_note_mb"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:backgroundTint="@color/Amber_400"
            android:contentDescription="@string/save"
            android:text="@string/save"
            app:cornerRadius="@dimen/margin_12"
            app:icon="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>