...
                app:layout_constraintStart_toStartOf="@+id/no_data_icon_iv"
                app:layout_constraintTop_toBottomOf="@+id/no_data_icon_iv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_note_mb"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_24"
            android:backgroundTint="@color/Amber_400"
            android:contentDescription="@string/take_note"
...
